2001-10-23	<mschimek@users.sf.net>

	* mp2.c: Improved the codec status stuff, moved the sample
	  parameters code.
	* systems.c: Made buffer allocation in add_input_stream
	  optional to clean up init() in mp2.c.
	* b_mp1e.c: Added format enumeration code, unfinished.

2001-10-21	<mschimek@users.sf.net>

	* video/mpeg1.c: Fixed incorrect type of bit_rate, strdup(0)
	  in option_print, virtual > coded_frame_rate bug.
	* audio/mp2.c: mpeg1_mp2_thread -> class.mainloop. 

2001-10-18	<mschimek@users.sf.net>
	
	* esd.c: Replaced timestamping code by the v4l type, should
	  better handle audio dropping.
	* oss.c: Accept other formats than S16LE.

2001-10-17	<mschimek@users.sf.net>

	* oss.c: Fixed sampling_freq check, reported by Ralf Oehler.
	* alsa.c: Corrected 0.9 compiling errors.

2001-10-14	<mschimek@users.sf.net>

	* mpeg1.c: Fixed drop & stop bug, fixed off-by-one frame_rate_code.
	* added rte_parameters and status.

2001-10-01	<mschimek@users.sf.net>

	* audio: Polished the timestamping, some bad changes since
	  09-20. Still not what I'd like, but hopefully sufficient.
	* mpeg1.c: Rewrote frame dropping/skipping code, added rte
	  options, lots of small changes.

2001-09-28	<mschimek@users.sf.net>

	* v4l2.c: Added Steven Davies' bttv 0.8 v4l2 r/w patch.

2001-09-25	<mschimek@users.sf.net>

	* video: Some work towards reentrancy and encapsulation.
	* mp2.c: Added S|U8|16LE sample conversion.
	* alsa.c: Added new direct, mmapping interface. Let's see
	  if this works better.

2001-09-23	finished rte audio options <mschimek@users.sf.net>

	* Moved rte_option stuff from b_mp1e.c to mp2.c, added get_option.
	* Made audio reentrant, unlimited number of mp2 streams, prefixed
	  local functions, all tests compiled in.
	* Changed mp1e frontend to use rte codec interface for audio.

2001-09-20	audio clock drift extravaganza <mschimek@users.sf.net>

	* oss.c: Found a timestamp bug (ispace sign, code obsolete), audio