@@ -1,4 +1,4 @@
-.TH MP1E 1 "$Date: 2001-10-07 10:55:51 $" "mp1e manual" \" -*- nroff -*-
+.TH MP1E 1 "$Date: 2001-11-03 23:43:52 $" "mp1e manual" \" -*- nroff -*-
 .SH NAME
 mp1e \- realtime MPEG-1 audio/video encoder
 .SH SYNOPSIS
@@ -45,10 +45,9 @@ bilingual programs). MPEG-1/2 Layer II joint stereo is not supported
 yet.
 .P
 .B mp1e
-will automatically invoke an apropriate level of psychoacoustic
-analysis as. You can force medium quality psychoacoustic analysis by
+will automatically select an appropriate level of psychoacoustic
+analysis. You can force medium quality psychoacoustic analysis by
 adding 10, full quality by adding 20 to the -a parameter.
-Psychoacoustic analysis works with all audio sampling rates.
 .RE
 .TP
 .BI "\-b, \-\-video_bit_rate " float
@@ -284,8 +283,8 @@ stands for silence of course. On exit
 .B mp1e
 restores the previous settings.
 .P
-The default mixer device (OSS) is "/dev/mixer", which
-can be changed with the
+The default mixer device (OSS) is "/dev/mixer", this can
+can be changed, or mixer access completely disabled, with the
 .B -x
 option.
 .RE
@@ -335,7 +334,9 @@ time.
 Specifies the OSS mixer device to select the recording source and
 volume. The default is "/dev/mixer". See also the
 .B -r
-option.
+option. To disable initialization of the mixer enter a phony name,
+for example "~/no_mixer_device".
+.RE
 .TP
 .BI "\-A, \-\-anno " string
 Include an annotation in the MPEG user_data field of the first stream
@@ -661,7 +662,8 @@ version 1.8.
 .P
 The ALSA and ESD interface in 1.9 doesn't work properly. Versions prior
 1.9.1 can hang due to a sync flaw and won't compile with ALSA devel libs
-0.9.
+0.9. Mixer volume wasn't set for the requested but the default PCM
+source by versions prior 1.9.2.
 .SH AUTHORS
 .IP \(em
 Michael H. Schimek (mschimek@users.sf.net)
